wip, some progress with paperbits module

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,6 +10,16 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "noStrictGenericChecks": true,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "noLib": false,
+    "skipLibCheck": true,
+    "emitDecoratorMetadata": true,
+    "allowUnreachableCode": true,
+    "listFiles": false,
+    "allowSyntheticDefaultImports": true,
+    "incremental": true,
     "target": "es2015",
     "module": "es2020",
     "lib": ["es2018", "dom"]
