--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,10 +2,8 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
-    "types": ["node", "knockout", "googlemaps"]
+    "outDir": "./out-tsc/app"
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts"],
-  "exclude": ["../node_modules/knockout/build/types"]
+  "include": ["src/**/*.d.ts", "node_modules/@paperbits/**/*.ts"]
 }
